<resources>
    <string name="app_name">Gordon</string>
    <string name="quest_title_label">Spurning</string>
    <string name="quest_always">Alltaf</string>
    <string name="quest_usually">Venjulega</string>
    <string name="quest_sometimes">Stundum</string>
    <string name="quest_rarely">Sjaldan</string>
    <string name="quest_never">Aldrei</string>
    <string name="login_button">Skrá inn</string>
    <string name="next_button">Áfram</string>
    <string name="score_text">Niðurstöður þínar í könnuninni</string>
    <string name="user">Stig</string>
    <string name="thank_you">Þú hefur nú lokið þátttöku þinni í þessari könnun. Takk fyrir.</string>
    <string name="close_app">Loka appi</string>
    <string name="numb_quest">Númer spurningar</string>
    <string name="username">Notendanafn</string>
    <string name="password">Lykilorð</string>
    <string name="skodaLista">Skoða lista af fyrirtækjum</string>
    <string name="skodaNidur">Skoða niðurstöður fyrirtækja</string>
    <string name="addButton">Bæta við</string>
    <string name="changeButton">Breyta</string>
    <string name="deleteButton">Eyða</string>
    <string name="searchText">Leit</string>
    <string name="searchBtn">Leita</string>
    <string name="goBackBtn">Til baka</string>
    <string name="signOutBtn">Útskrá</string>
    <string name="questionBtn">Fara í spurningar</string>
    <string name="searchCompany">Leitaðu eftir fyrirtæki/deild</string>
    <string name="searchButton">Ná í meðaltal</string>
    <string name="medianResult">Meðaltal fyrirtækis/deildar:</string>
    <string name="skra_btn">Fara yfir í spurningar</string>
    <string name="emailtext">Netfang:</string>
    <string name="company">Fyrirtæki:</string>
    <string name="department">Deild:</string>
    <string name="welcome">Velkominn í Gordon</string>
    <string name="info">Vinnsamlegast fylltu út allar upplýsingarnar hér að neðan og svaraðu svo öllum spurningunum samviskusamlega.</string>
    <string name="btn_next">Áfram</string>
    <string name="btn_getQuest">Ná í spurningar</string>

</resources>
