<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/quest_title_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quest_title_label"/>

    <Button
        android:id="@+id/quest_always"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/quest_always" />

    <Button
        android:id="@+id/quest_usually"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/quest_usually" />

    <Button
        android:id="@+id/quest_sometimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/quest_sometimes" />

    <Button
        android:id="@+id/quest_rarely"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/quest_rarely" />

    <Button
        android:id="@+id/quest_never"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/quest_never" />

</LinearLayout>