<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestActivity" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/numb_quest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numb_quest"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <TextView
            android:id="@+id/quest_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quest_title_label"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:layout_weight="0.04">

            <RadioButton
                android:id="@+id/always"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/quest_always" />

            <RadioButton
                android:id="@+id/usually"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_usually" />

            <RadioButton
                android:id="@+id/sometimes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_sometimes" />

            <RadioButton
                android:id="@+id/rarely"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_rarely" />

            <RadioButton
                android:id="@+id/never"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_never" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button" />
    </LinearLayout>
</RelativeLayout>