<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/decription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcome"
        android:gravity="center"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="325dp"
        android:layout_height="29dp"
        android:layout_below="@+id/decription"
        android:layout_centerHorizontal="true"
        android:text="@string/emailtext"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/emailfillin"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_alignStart="@+id/email_text"
        android:layout_below="@+id/email_text"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/comp"
        android:layout_width="322dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/email_text"
        android:layout_below="@+id/emailfillin"
        android:textSize="19sp"
        android:text="@string/company" />

    <EditText
        android:id="@+id/company"
        android:layout_width="322dp"
        android:layout_height="56dp"
        android:layout_alignStart="@+id/email_text"
        android:layout_below="@+id/comp" />

    <TextView
        android:id="@+id/dep"
        android:layout_width="326dp"
        android:layout_height="32dp"
        android:layout_above="@+id/department"
        android:layout_centerHorizontal="true"
        android:text="@string/department"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/department"
        android:layout_width="326dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="81dp" />

    <Button
        android:id="@+id/skra_btn"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@android:color/white"
        android:onClick="login"
        android:text="@string/skra_btn"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="38sp" />

</RelativeLayout>


