<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestActivity" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <Space
            android:layout_width="match_parent"
            android:layout_height="116dp" />

        <Button
            android:id="@+id/skodaListaBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skodaLista" />

        <Button
            android:id="@+id/skodaNidurBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skodaNidur" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="58dp" />

        <Button
            android:id="@+id/signOutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signOutBtn" />
    </LinearLayout>
</RelativeLayout>