<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="305dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="49dp" />

            <Button
                android:id="@+id/addBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:text="@string/addButton"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_editor_absoluteY="418dp" />

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deleteButton"
                tools:layout_editor_absoluteX="204dp"
                tools:layout_editor_absoluteY="418dp" />

            <Button
                android:id="@+id/changeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changeButton"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="418dp" />

            <Button
                android:id="@+id/goBackBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goBackBtn" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>