<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="509dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/searchCompany"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/searchCompany"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <Button
            android:id="@+id/buttonScore"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@android:color/white"
            android:text="@string/searchButton" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="51dp" />

        <TextView
            android:id="@+id/resault"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/medianResult"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textScore"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>


